# tiago_dnn_ik

./: .gitignore  README.md  custom_metrics.py  test_inference.py  tiago_datagen_plugins.xml  training.py
docker/: Dockerfile  build.sh  run.sh
launch/: datagen_controller.launch  tiago_gazebo.launch
scripts/: data_stats.py  init_datagen.py
src/: tiago_datagen.cpp
tiago_data_generation/: change_normalization.py  (+3 more)
tiago_data_generation/gazebo_data_generation/: package.xml
tiago_dnn_inference/: CMakeLists.txt  README.md  package.xml
tiago_dnn_inference/config/: tiago_dnn.yaml
tiago_dnn_inference/devel/: _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
tiago_dnn_inference/devel/.private/catkin_tools_prebuild/: .catkin  .rosinstall  local_setup.sh  setup.sh
tiago_dnn_inference/devel/.private/catkin_tools_prebuild/lib/pkgconfig/: catkin_tools_prebuild.pc
tiago_dnn_inference/devel/.private/catkin_tools_prebuild/share/catkin_tools_prebuild/cmake/: catkin_tools_prebuildConfig.cmake
tiago_dnn_inference/devel/lib/pkgconfig/: catkin_tools_prebuild.pc
tiago_dnn_inference/devel/share/catkin_tools_prebuild/cmake/: catkin_tools_prebuildConfig-version.cmake  catkin_tools_prebuildConfig.cmake
tiago_dnn_inference/docker/: Dockerfile  build.sh  run.sh
tiago_dnn_inference/models/rl/: model_1000_vel_noobst_clamped.pt  model_2500.pt  model_2500_vel.pt  model_500.pt  model_500_vel.pt  model_500_vel_clamped.pt
tiago_dnn_inference/models/stats/: cien_mil_quat_iqr.yaml
tiago_dnn_inference/src/: dnn_inference.py
(+108 files in other folders)
