<package format="2">
    <name>tiago_data_generation</name>
    <version>1.0.0</version>
    <description>A controller to generate a dataset for IK with TIAGo.</description>
    <maintainer email="anacg1620@gmail.com">Ana Calzada</maintainer>
    <license>LGPLv2.1</license>

    <buildtool_depend>catkin</buildtool_depend>

    <depend>actionlib</depend>
    <depend>play_motion_msgs</depend>
    <depend>sensor_msgs</depend>
    <depend>controller_manager_msgs</depend>
    <depend>controller_interface</depend>
    <depend>hardware_interface</depend>
    <depend>pluginlib</depend>
    <depend>roscpp</depend>
    <depend>orocos_kdl</depend>
    <depend>kdl_parser</depend>
    <depend>urdf</depend>

    <export>
        <controller_interface plugin="${prefix}/tiago_datagen_plugins.xml"/>
    </export>
  </package>
